<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iniciar_sesion2"
    tools:context="eetac.dsa.activity.Main">

    <TextView
        android:id="@+id/nameMain"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="121dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="57dp"
        android:text="@string/MainName"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/userBox"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameMain" />

    <EditText
        android:id="@+id/passBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/passBox"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="114dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="11dp"

        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/checkBox"
        app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passBox" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="129dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="21dp"
        android:background="@android:drawable/editbox_background"
        android:text="@string/btnIniciarSesion"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        android:layout_marginEnd="133dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/editbox_background"
        android:text="@string/btnRegistrarse"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />
</android.support.constraint.ConstraintLayout>
